fix: ensure Insert dropdown is fully visible on mobile

--- a/app/javascript/stylesheets/_product_content.scss
+++ b/app/javascript/stylesheets/_product_content.scss
@@ -1,14 +1,6 @@
 $dashed-accent-border: dashed $border-width full-color(accent);
 
 main.product-content {
-  &.editor {
-    height: 100%;
-
-    @media (max-width: 640px) {
-      height: 100vh;
-    }
-  }
-  
   header h1 {
     @include max-lines(2);
   }
